src/objects/ints__TUCR_Message__c.object
<CustomObject>
    <fields>
        <fullName>ints__Code__c</fullName>
        <label>Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Text__c</fullName>
        <label>Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__TransUnion_Credit_Report__c</fullName>
        <label>TransUnion Credit Report</label>
        <referenceTo>ints__TransUnion_Credit_Report__c</referenceTo>
        <relationshipLabel>TUCR Messages</relationshipLabel>
        <relationshipName>TUCR_Messages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>TUCR Message</label>
    <nameField>
        <displayFormat>TUCR_MSG-{000000000}</displayFormat>
        <label>TUCR Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TUCR Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>